force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MUMBAI</fullName>
            </value>
            <value>
                <fullName>HYD</fullName>
            </value>
            <value>
                <fullName>CHE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>