force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/Custom_Field_Test__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Test__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom_Field_Test</label>
    <type>Checkbox</type>
</CustomField>