force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/ExternalID_Acc__c.field-meta.xml
<CustomField>
    <fullName>ExternalID_Acc__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID_Acc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>