force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/ExternalIdExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>