force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/Picklist1__c.field-meta.xml
<CustomField>
    <fullName>Picklist1__c</fullName>
    <label>Picklist1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>