force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/sample_Cust_Field__c.field-meta.xml
<CustomField>
    <fullName>sample_Cust_Field__c</fullName>
    <label>sample_Cust_Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>