force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/fields/SampleExternalId__c.field-meta.xml
<CustomField>
    <fullName>SampleExternalId__c</fullName>
    <externalId>true</externalId>
    <label>SampleExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>