force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Account/recordTypes/CleanDataService.recordType-meta.xml
<RecordType>
    <fullName>CleanDataService</fullName>
    <active>true</active>
    <label>CleanDataService</label>
</RecordType>